[package]
name = "minimax_dot"
version = "0.1.0"
authors = ["Reconcyl <22424430+Reconcyl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minimax_dot_ai"
path = "src/lib.rs"

[dependencies]
static_assertions = "1.1.0"
rand = "0.7.3"
