[package]
name = "minimax_dot"
version = "0.1.0"
authors = ["Reconcyl <22424430+Reconcyl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai"
path = "src/ai/lib.rs"

[[bin]]
name = "term_viz"
path = "src/term_viz/main.rs"

[dependencies]
static_assertions = "1.1.0"
rand = "0.7.3"
